# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\CartController;
+use App\Http\Controllers\Api\CheckoutController;
 use App\Http\Controllers\Api\ProductController;
 use App\Http\Controllers\Api\TokenController;
 use App\Http\Controllers\Api\RegisterUserController;
@@ -27,4 +28,5 @@ Route::middleware(['auth:sanctum'])->group(function () {
     Route::post('/carts', [CartController::class, 'createCart']);
     Route::post('/carts/{uuid}', [CartController::class, 'addItem']);
     Route::get('/carts/{uuid}', [CartController::class, 'viewCart']);
+    Route::post('/carts/{uuid}/checkout', [CheckoutController::class, 'checkout']);
 });
